[tool.poetry]
name = "brasil-api"
version = "0.1.0"
description = ""
authors = ["Hudson Brendon <contato.hudsonbrendon@gmail.com>"]
readme = "README.md"
packages = [{include = "brasil_api"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
